--- a/index.html
+++ b/index.html
@@ -31,12 +31,33 @@
             <div class="col-md-7">
                 <div class="col-md-8">
                     <form class="example" action="#">
-					<input type="text" placeholder="Search.." name="search">					
-                    </form>			
+						<input onclick="myF1();" type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()" name="search">
+                    </form>
+                    <div id="myDropdown" class="dropdown-content">
+				    	<a onclick="myF1(); document.getElementById('myInput').value='Ķīp6(Ķīpsalas st 6) Faculty of architecture'; arg2 = 'PAGES/FacultyofArchitecture.html';">Ķīp6(Ķīpsalas st 6) Faculty of architecture</a>
+					    
+					 	<a onclick="myF1(); document.getElementById('myInput').value='Ķīp6A(Ķīpsalas st 6A) - Ķīp6B(Ķīpsalas st 6B) Faculty of Civil Engineering'; arg2 = 'PAGES/FacultyofCivilEngineering.html';">Ķīp6A(Ķīpsalas st 6A) - Ķīp6B(Ķīpsalas st 6B) Faculty of Civil Engineering</a>
+					    
+					 	<a onclick="myF1(); document.getElementById('myInput').value='S1(Sētas st 1) - D2(Daugavgrīvas st 2) - M1(Meža st) Faculty of Computer Science and Information Technology'; arg2 = 'PAGES/FacultyofComputerScienceandInformationTechnology.html';">S1(Sētas st 1) - D2(Daugavgrīvas st 2) - M1(Meža st) Faculty of Computer Science and Information Technology</a>
+					    
+					 	<a onclick="myF1(); document.getElementById('myInput').value='Kr(Kronvalda bulvāris) Faculty of E-Learning Technologies and Humanities'; arg2 = 'PAGES/FacultyofE-LearningTechnologiesandHumanities.html';">Kr(Kronvalda bulvāris) Faculty of E-Learning Technologies and Humanities</a>
+					    
+					    <a onclick="myF1(); document.getElementById('myInput').value='Kc6(Kalnciema st 6) Faculty of Engineering Economics and Management'; arg2 = 'PAGES/FacultyofEngineeringEconomicsandManagement.html';">Kc6(Kalnciema st 6) Faculty of Engineering Economics and Management</a>
+					    
+					 	<a onclick="myF1(); document.getElementById('myInput').value='PV(Paula Valdena st) Faculty of Materials Science and Applied Chemistry'; arg2 = 'PAGES/FacultyofMaterialsScienceandAppliedChemistry.html';">PV(Paula Valdena st) Faculty of Materials Science and Applied Chemistry</a>
+					    
+					 	<a onclick="myF1(); document.getElementById('myInput').value='Ķīp6B(Ķīpsalas st 6B) Faculty of Mechanical Engineering Transport and Aeronautics'; arg2 = 'PAGES/FacultyofMechanicalEngineeringTransportandAeronautics.html';">Ķīp6B(Ķīpsalas st 6B) Faculty of Mechanical Engineering Transport and Aeronautics</a>
+					    
+					 	<a onclick="myF1(); document.getElementById('myInput').value='Āz(Āzenes st) Faculty of Electrical and Environmental Engineering'; arg2 = 'PAGES/FacultyofPowerandElectricalEngineering.html';">Āz(Āzenes st) Faculty of Electrical and Environmental Engineering</a>
+						
+						<a onclick="myF1(); document.getElementById('myInput').value='Āz(Āzenes st) Faculty of Electronics and Telecommunications'; arg2 = 'PAGES/FacultyofElectronicsandTelecommunications.html';">Āz(Āzenes st) Faculty of Electronics and Telecommunications</a>
+
+					</div>
                 </div>
                 <div class="col-md-4">
-                <button class="btn cool-link btnSearch"  type="submit">Search</button>
+                	<button onclick="myF3()" class="btn cool-link btnSearch"  type="button">Search</button>
                 </div>
+
             </div>
             <div class="col-md-3"  id="nav1">
 				<ul>
@@ -74,11 +95,7 @@
    <a href="PAGES/FacultyofEngineeringEconomicsandManagement.html">Faculty of Engineering Economics and Management</a>
   <a href="PAGES/FacultyofMaterialsScienceandAppliedChemistry.html">Faculty of Materials Science and Applied Chemistry</a>
   <a href="PAGES/FacultyofMechanicalEngineeringTransportandAeronautics.html">Faculty of Mechanical Engineering, Transport and Aeronautics</a>
-<<<<<<< HEAD
-  <a href="PAGES/FacultyofPowerandElectricalEngineering.html">Faculty of Power and Electrical Engineering</a>
-=======
   <a href="PAGES/FacultyofPowerandElectricalEngineering.html">Faculty of Electrical and Environmental Engineering</a>
->>>>>>> 21afa64b913c82fb6be89ff68e6348376b552a76
   <a href="PAGES/FacultyofElectronicsandTelecommunications.html">Faculty of Electronics and Telecommunications</a>
 </div>
 <div class = "col-md-10" >
@@ -142,7 +159,7 @@
   <span class="dot"></span> 
   <span class="dot"></span> 
   <span class="dot"></span>
-   <span class="dot"></span>
+  <span class="dot"></span>
 </div>
 
 
@@ -170,55 +187,9 @@ function showSlides() {
 }
 </script>
 
-<script>
-class Search {
-  var user_text;
-  var key_world = [ "faculty of architecture",
-  "faculty of civil engineering",
-  "faculty of computer science and information technology",
-  "faculty of e-learning technologies and humanities",
-  "faculty of engineering economics and management",
-  "faculty of materials science and applied chemistry",
-  "faculty of mechanical engineering,transport and aeronautics",
-  "faculty of power and electrical engineering","faculty of electronics and telecommunications"];
-  var link = ["PAGES/FacultyofArchitecture.html",
-  "PAGES/FacultyofCivilEngineering.html",
-  "PAGES/FacultyofComputerScienceandInformationTechnology.html",
-  "PAGES/FacultyofE-LearningTechnologiesandHumanities.html",
-  "PAGES/FacultyofEngineeringEconomicsandManagement.html",
-  "PAGES/FacultyofMaterialsScienceandAppliedChemistry.html",
-  "PAGES/FacultyofMechanicalEngineeringTransportandAeronautics.html",
-  "PAGES/FacultyofPowerandElectricalEngineering.html",
-  "PAGES/FacultyofElectronicsandTelecommunications.html"];
-  constructor(user_text) {
-    this.user_text = user_text;
-    this.key_world = [];
-    this.link = [];
-  }
-  get user_text() {
-    return this.user_text;
-  }
-  set user_text(x) {
-    this.user_text = x;
-  }
-  
-  searching_keyword(x){
-	  
-	  }
-  searching_link(x){
-	  
-	  }
-  recuperate_text(x){
-	  
-	  }
-  word_cut(){
-	  
-	  }
-</script>
+
 </div>
 </div>
-
-
 
 
 
@@ -310,7 +281,32 @@ class Search {
     </div>
     <!--==========================================================/FOOTER===============================================================-->  
 </div>
-    
+    <script>
+    	var arg2;
+    	function myF1(){
+    		document.getElementById("myDropdown").classList.toggle("show");
+    		//window.location.replace("http://www.w3schools.com");
+    	}
+    	function filterFunction() {
+		  var input, filter, ul, li, a, i;
+		  input = document.getElementById("myInput");
+		  filter = input.value.toUpperCase();
+		  div = document.getElementById("myDropdown");
+		  a = div.getElementsByTagName("a");
+		  for (i = 0; i < a.length; i++) {
+		    txtValue = a[i].textContent || a[i].innerText;
+		    if (txtValue.toUpperCase().indexOf(filter) > -1) {
+		      a[i].style.display = "";
+		    } else {
+		      a[i].style.display = "none";
+		    }
+		  }
+		}
+
+		function myF3(){
+			window.location.href = arg2;
+		}
+    </script>
 </body>
 
 </html>
