--- a/PAGES/FacultyofE-LearningTechnologiesandHumanities.html
+++ b/PAGES/FacultyofE-LearningTechnologiesandHumanities.html
@@ -71,11 +71,7 @@
    <a href="../PAGES/FacultyofEngineeringEconomicsandManagement.html">Faculty of Engineering Economics and Management</a>
   <a href="../PAGES/FacultyofMaterialsScienceandAppliedChemistry.html">Faculty of Materials Science and Applied Chemistry</a>
   <a href="../PAGES/FacultyofMechanicalEngineeringTransportandAeronautics.html">Faculty of Mechanical Engineering, Transport and Aeronautics</a>
-<<<<<<< HEAD
-  <a href="../PAGES/FacultyofPowerandElectricalEngineering.html">Faculty of Power and Electrical Engineering</a>
-=======
   <a href="../PAGES/FacultyofPowerandElectricalEngineering.html">Faculty of Electrical and Environmental Engineering</a>
->>>>>>> 21afa64b913c82fb6be89ff68e6348376b552a76
   <a href="../PAGES/FacultyofElectronicsandTelecommunications.html">Faculty of Electronics and Telecommunications</a>
 </div>
 
@@ -120,7 +116,7 @@
         <div class="col-md-12" style="text-align: center;">
             <button type="button" class="btn btn-link" data-toggle="modal" data-target="#kronvaldaModal" style="color: black;">
                 <h3 id="kronvalda">Kr</h3>
-                <h3 id="kronvalda"> Kronvalda bulvāris</h3>
+                <h3 id="kronvalda"> Kronvalda bulvaris</h3>
             </button>
             
         </div>
@@ -136,7 +132,7 @@
       <div class="modal-content">
         <div class="modal-header" >
         <div class="col-md-10">
-          <h3 class="modal-title" style="text-align: center; color:  #005551;" >Kronvalda bulvāris</h3>
+          <h3 class="modal-title" style="text-align: center; color:  #005551;" >Kronvalda bulvaris</h3>
         </div>
         <div class="col-md-2">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -146,8 +142,8 @@
         </div>
         <div class="modal-body">
          <!-- Add here coordinates at #-->
-          <a href="https://www.google.lv/maps/place/Kronvalda+bulv%C4%81ris+1,+Centra+rajons,+R%C4%ABga,+LV-1010/@56.9541719,24.101194,17z/data=!3m1!4b1!4m5!3m4!1s0x46eecfdafa666369:0x801a0cd7b15445e0!8m2!3d56.954169!4d24.1033827"><img src="../IMAGES/kronvalda.jpg" style="width: 100%;"></a>
-          <h4 style="text-align: center;"><a href="https://www.google.lv/maps/place/Kronvalda+bulv%C4%81ris+1,+Centra+rajons,+R%C4%ABga,+LV-1010/@56.9541719,24.101194,17z/data=!3m1!4b1!4m5!3m4!1s0x46eecfdafa666369:0x801a0cd7b15445e0!8m2!3d56.954169!4d24.1033827">Click here</a> to go to Google Maps</h4>
+          <a href="https://www.google.lv/maps/place/56%C2%B057'15.6%22N+24%C2%B006'12.1%22E/@56.9543429,24.1011803,17z/data=!3m1!4b1!4m5!3m4!1s0x0:0x0!8m2!3d56.95434!4d24.103369"><img src="../IMAGES/kronvalda.jpg" style="width: 100%;"></a>
+          <h4 style="text-align: center;"><a href="https://www.google.lv/maps/place/56%C2%B057'15.6%22N+24%C2%B006'12.1%22E/@56.9543429,24.1011803,17z/data=!3m1!4b1!4m5!3m4!1s0x0:0x0!8m2!3d56.95434!4d24.103369">Click here</a> to go to Google Maps</h4>
         </div>
         
       </div>
