--- a/PAGES/FacultyofMaterialsScienceandAppliedChemistry.html
+++ b/PAGES/FacultyofMaterialsScienceandAppliedChemistry.html
@@ -71,11 +71,7 @@
     <a href="../PAGES/FacultyofEngineeringEconomicsandManagement.html">Faculty of Engineering Economics and Management</a>
   <a href="../PAGES/FacultyofMaterialsScienceandAppliedChemistry.html">Faculty of Materials Science and Applied Chemistry</a>
   <a href="../PAGES/FacultyofMechanicalEngineeringTransportandAeronautics.html">Faculty of Mechanical Engineering, Transport and Aeronautics</a>
-<<<<<<< HEAD
-  <a href="../PAGES/FacultyofPowerandElectricalEngineering.html">Faculty of Power and Electrical Engineering</a>
-=======
   <a href="../PAGES/FacultyofPowerandElectricalEngineering.html">Faculty of Electrical and Environmental Engineering</a>
->>>>>>> 21afa64b913c82fb6be89ff68e6348376b552a76
   <a href="../PAGES/FacultyofElectronicsandTelecommunications.html">Faculty of Electronics and Telecommunications</a>
 </div>
 <!-- =================================================//BODY//============================================= -->
@@ -145,8 +141,8 @@
         </div>
         <div class="modal-body">
          <!-- Add here coordinates at #-->
-          <a href="https://www.google.lv/maps/place/Paula+Valdena+iela,+Kurzemes+rajons,+R%C4%ABga,+LV-1048/@56.9541,24.0776413,17z/data=!3m1!4b1!4m5!3m4!1s0x46eecfe0d77126b7:0xa169fb344ffb5280!8m2!3d56.9541!4d24.07983"><img src="../IMAGES/paula_valdena.png" style="width: 100%;"></a>
-          <h4 style="text-align: center;"><a href="https://www.google.lv/maps/place/Paula+Valdena+iela,+Kurzemes+rajons,+R%C4%ABga,+LV-1048/@56.9541,24.0776413,17z/data=!3m1!4b1!4m5!3m4!1s0x46eecfe0d77126b7:0xa169fb344ffb5280!8m2!3d56.9541!4d24.07983">Click here</a> to go to Google Maps</h4>
+          <a href="https://www.google.lv/maps/place/56%C2%B057'12.9%22N+24%C2%B004'40.3%22E/@56.9535759,24.0756593,17z/data=!3m1!4b1!4m5!3m4!1s0x0:0x0!8m2!3d56.953573!4d24.077848"><img src="../IMAGES/paula_valdena.png" style="width: 100%;"></a>
+          <h4 style="text-align: center;"><a href="https://www.google.lv/maps/place/56%C2%B057'12.9%22N+24%C2%B004'40.3%22E/@56.9535759,24.0756593,17z/data=!3m1!4b1!4m5!3m4!1s0x0:0x0!8m2!3d56.953573!4d24.077848">Click here</a> to go to Google Maps</h4>
         </div>
         
       </div>
